--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
