--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cryptojs": "^2.5.3",
     "firebase": "^9.7.0",
     "hex2ascii": "^0.0.3",
+    "jspdf": "^2.5.1",
     "ng2-charts": "^3.0.10",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
@@ -24,6 +25,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "serve": "^13.0.2",
     "web-vitals": "^2.1.0"
   },
